--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,27 @@ services:
     volumes:
       - ./krakend:/etc/krakend
     ports:
-      - "8080:8080"
-      - "8090:8090"
+      - "8081:8080"
+      - "8091:8090"
     depends_on:
       - fake_api
       - jaeger
+  krakend_ce_secondary:
+    image: devopsfaith/krakend:0.7.0
+    volumes:
+      - ./krakend:/etc/krakend
+    ports:
+      - "8082:8080"
+      - "8092:8090"
+    depends_on:
+      - fake_api
+      - jaeger
+  lb:
+    build:
+      context: ./haproxy
+    ports:
+      - "8080:80"
+      - "1936:1936"
+    depends_on:
+      - krakend_ce
+      - krakend_ce_secondary
